--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/04장. 처리율 제한 장치의 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/04장. 처리율 제한 장치의 설계.md
@@ -53,8 +53,6 @@ tags:
 		- 효율적인 관리의 문제
 	- 클라우드 마이크로서비스에서는 처리율 제한 장치는 API 게이트웨이 컴포넌트에 구현됨
 		- 클라우드 업체가 유지 보수를 담당
-		- ==이게 가장 좋아보이긴 한데 현재 회사에서는 비용문제 때문에 이런걸 안쓸것 같음 다른 회사에서는 어떨까?==
-
 
 - 요청이 가로막히면 HTTP 상태 코드 429 를 반환
 	- 구글에서도 그렇게 씀 [구글링크](https://developers.google.com/docs/api/limits?hl=ko)
@@ -193,9 +191,6 @@ tags:
 
 사용자가 너무 많은 요청을 보내면 429 오류를 X-RateLimit-Retry-After 헤더와 함께 반환하자.
 
-==꼭 위 헤더를 다 보낼 필요는 없겠지?==
-- 경우에 따라 다르다.
-
 ## 분산 환경에서의 처리율 제한 장치의 구현
 
 여러 대의 서버와 병렬 스레드를 지원하도록 처리율 한도 초과 트래픽 시스템을 확장하려면 두가지 문제를 풀어야 한다.
@@ -211,16 +206,12 @@ tags:
 - 레디스 정렬집합을 쓰는 것도 하나의 방법
 	- 레디스 Sorted Set 은 중복되지 않는 데이터를 가지고 있으니까 이를 활용할 수 있다는 뜻이다.
 	- 삽입삭제 모두 O(logN) 의 속도를 가져서 속도도 괜찮다.
-	- ==그런데 이방법을 쓰면 사용할 수 있는 알고리즘에 제한이 생기지 않을까? 제일 대표적인 토큰버킷 알고리즘은 단순히 버킷 안의 토큰을 줄이는건데 레디스 Sorted Set 은 여기에서는 못쓸것 같다.==
 - 루아 스크립트를 쓰는 것도 하나의 방법
-	- ==혹시 따로 공부한 사람이 있을까? ==
-	- 이런것 보다 루아 스크립트를 왜 쓰는지를 아는게 더 중요하다.
 
-- 제일 중요한건 안쓸수 있는대까지 미루자......
+- 제일 중요한건 안쓸수 있는대까지 미루자
 	- 레디스 놓으면 레디스 관리포인트 늘어난다.
 	- 회사는 결국 돈. 돈을 아껴야한다.
 	- 설계를 바꾸는 방향도 고민해보자.
-
 
 ### 동기화 이슈
 
