refactor: add gitignore

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/04장. 처리율 제한 장치의 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/04장. 처리율 제한 장치의 설계.md
@@ -229,12 +229,12 @@ tags:
 		- 그래서 데이터 변경이 발생했을 때, 시간이 지남에 따라 여러 노드에 전파되면서 당장은 아니지만 최종적으로 일관성이 유지되는 것
 		- 동시성을 제공하지 않고 결과적으로 일관성을 갖는다는 의미
 	- ==버킷 동기화는 실시간으로 카운터가 전세계적으로 올라가야하지 않을까? 안그러면 접속하는 캐시에 따라서 매번 달라지지 않나? 이런 경우가 있지 않을까?==
-		- 클러스터 개념 이해 필요
-		- Sticky Session 
-		- 이중화부터 시작하자. MySQL 은 기본 이중화가 되어있다. 칼레락? 
-		- ==MySQL 이중화 클러스터 해보자. 도커로==
+		- [[클러스터|클러스터 개념]] 이해 필요
+		- [[Sticky Session|Stick Session 개념]] 이해 필요
+		- MySQL 이중화 개념 이해 필요
+			- ==도커로 MySQL 이중화 클러스터 해보자==
+			- Real MySQL 책
 		- ==톰캣 세션 클러스터링==, Nginx HA Proxy, 프록시
-		- Real MySQL
 
 ### 모니터링
 
