update: 07장. 네트워크 프로그래밍 기초 - 02. InetAddress 클래스를 활용한 도메인과 IP 변환

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/07장. 네트워크 프로그래밍 기초.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/07장. 네트워크 프로그래밍 기초.md
@@ -75,6 +75,20 @@ tags:
 
 # 02. InetAddress 클래스를 활용한 도메인과 IP 변환
 
+> [!note] IP 와 관련된 클래스, InetAddress
+> - java.net 패키지에 있는 클래스
+> - 도메인 주소를 IP 주소로 변환하거나 반대로 IP 주소를 도메인 주소로 변경할 수 있다.
+> - 문자열이나 바이트 배열 형태로 IP 주소에 대한 정보를 얻을 수 있다.
+> - 현재 컴퓨터의 이름을 구할 수 있다.
+
+- InetAddress 객체는 생성자를 이용해서 객체를 생성하지 않고, 정적 메소드를 이용하여 객체를 생성한다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 7-1.png]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 표 7-2.png]]
+
+
+
 
 
 
