--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/07장. 네트워크 프로그래밍 기초.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/07장. 네트워크 프로그래밍 기초.md
@@ -83,17 +83,72 @@ tags:
 
 - InetAddress 객체는 생성자를 이용해서 객체를 생성하지 않고, 정적 메소드를 이용하여 객체를 생성한다.
 
+- InetAddress 클래스는 IP 를 이용해서 IP 에 해당하는 도메인도 구할 수 있지만, 이 부분은 신뢰성이 떨어진다.
+- 도메인에 대한 IP 를 구하고자 할 경우에만 사용하는 것이 좋다.
+
 ![[자바 IO & NIO 네트워크 프로그래밍 - 표 7-1.png]]
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 표 7-2.png]]
 
+## 1. InetAddress 클래스를 이용한 nslookup 명령 구현
 
+```java
+import java.net.InetAddress;  
+  
+public class NSLookup {  
+    public static void main(String[] args) {  
+        InetAddress inetaddr[] = null;  
+        try {  
+            inetaddr = InetAddress.getAllByName("www.google.com");  
+        } catch (Exception e) {  
+            e.printStackTrace();  
+            return;  
+        }  
+  
+        for (int i = 0; i < inetaddr.length; i++) {  
+            System.out.println(inetaddr[i].getHostName());  // 도메인명
+            System.out.println(inetaddr[i].getHostAddress()); // IP주소 
+            System.out.println(inetaddr[i].toString()); // 도메인명/IP주소
+            System.out.println();  
+        }  
+    }  
+}
+```
 
+![[자바 IO & NIO 네트워크 프로그래밍 - 예제 7-1.png|400]]
 
+- 하나의 도메인은 IP 정보 여러 개를 가질 수 있기 때문에 배열 형태로 반환된다.
+- 만약 찾을 수 없는 도메인명이거나 잘못된 형식의 IP 주소라면 UnknownHostException 이 발생한다.
 
+## 2. InetAddress 클래스를 이용한 로컬 컴퓨터명과 IP 구하기
 
+```java
+import java.net.InetAddress;  
+import java.net.UnknownHostException;  
+  
+public class NSLookupLocal {  
+    public static void main(String[] args) {  
+        InetAddress inetAddress = null;  
+        try {  
+            inetAddress = InetAddress.getLocalHost();  
+        } catch (UnknownHostException e) {  
+            e.printStackTrace();  
+            return;  
+        }  
+  
+        System.out.println(inetAddress.getHostName()); // 호스트 주소  
+        System.out.println(inetAddress.getHostAddress()); // IP 주소  
+  
+        System.out.println("byte[] 형식의 ip 주소 값의 출력");  
+        byte[] ip = inetAddress.getAddress();  
+        for (int i = 0; i < ip.length; i++) {  
+            System.out.println(Byte.toUnsignedInt(ip[i]));  
+            if (i != ip.length - 1) {  
+                System.out.print(".");  
+            }  
+        }  
+    }  
+}
+```
 
-
-
-
-
+![[자바 IO & NIO 네트워크 프로그래밍 - 예제 7-2.png|300]]
