update: 05장. 안정 해시 설계

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -6,6 +6,23 @@ tags:
   - 책_가상_면접_사례로_배우는_대규모_시스템_설계_기초
   - 책_System_Design_Interview
 ---
+> [!note] 안정 해시란
+> 수평적 규모 확장성을 달성하기 위해서는 요청 또는 데이터를 서버에 균등하게 나누는 것이 중요하다.
+> 안정 해시는 이 목표를 달성하기 위해 보편적으로 사용하는 기술이다.
+
+
+
+
+
+
+
+1. Consistent hashing : https://en.wikipedia.org/wiki/Consistent_hashing
+2. Consistent Hashing : https://tom-e-white.com/2007/11/consistent-hashing.html
+3. Dynamo: Amazon's Highly Available Key-value Store : https://dl.acm.org/doi/10.1145/1294261.1294281
+4. Cassandra - A Decentralized Structured Storage System : https://www.cs.cornell.edu/Projects/ladis2009/papers/lakshman-ladis2009.pdf
+5. How Discord Scaled Elixir to 5,000,000 Concurrent Users : https://discord.com/blog/how-discord-scaled-elixir-to-5-000-000-concurrent-users
+6. CS168: The Modern Algorithmic Toolbox Lecture #1 : Introduction and Consistent Hashing : http://theory.stanford.edu/~tim/s16/l/l1.pdf
+7. Maglev: A Fast and Reliable Software Network Load Balancer : https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44824.pdf
 
 
 
