update: 05장. 안정 해시 설계 - 안정 해시가 해결하려는 문제

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -7,8 +7,23 @@ tags:
   - 책_System_Design_Interview
 ---
 > [!note] 안정 해시란
-> 수평적 규모 확장성을 달성하기 위해서는 요청 또는 데이터를 서버에 균등하게 나누는 것이 중요하다.
-> 안정 해시는 이 목표를 달성하기 위해 보편적으로 사용하는 기술이다.
+> 수평적 규모 확장성 달성을 위해 요청 또는 데이터를 서버에 균등하게 나눌 때 사용하는 기술
+
+# 안정 해시가 해결하려는 문제
+
+> [!summary] 요약
+> 서버의 추가/삭제 시 serverIndex 가 변하면서 서버에 부하가 균등하게 나누어지지 않는다.
+
+ - 서버에 부하를 균등하게 나누는 보편적인 방법은 아래 해시 함수를 사용하는 것이다.
+
+`serverIndex = hash(key) % N (N은 서버의 개수)`
+
+- 이 수식은 N 값에 크게 의존하고 있기 때문에 N 의 숫자가 변하면 serverIndex 값도 변한다.
+	- 만약 서버 하나가 장애가 나서 내려간다면 serverIndex 값도 갑작스럽게 변할 것이다.
+- 만약 이 해시 함수로 캐시 서버를 선택한다면, 특정 서버가 죽었을 경우 대부분의 캐시 클라이언트가 데이터가 없는 잘못된 서버에 접속하게 될 것이다.
+	- 물론 결과는 대규모 캐시 미스로 이어진다.
+
+
 
 
 
