--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -14,15 +14,29 @@ tags:
 > [!summary] 요약
 > 서버의 추가/삭제 시 serverIndex 가 변하면서 서버에 부하가 균등하게 나누어지지 않는다.
 
- - 서버에 부하를 균등하게 나누는 보편적인 방법은 아래 해시 함수를 사용하는 것이다.
+ - 서버에 부하를 균등하게 나누는 보편적인 방법
+	 - 아래 해시 함수를 사용하여 캐시 테이블을 만들어 사용한다.
+	 - `serverIndex = hash(key) % N (N은 서버의 개수)`
 
-`serverIndex = hash(key) % N (N은 서버의 개수)`
+![[System Design Interview - 표 5-1.png|300]]
+![[System Design Interview - 그림 5-1.png|300]]
 
 - 이 수식은 N 값에 크게 의존하고 있기 때문에 N 의 숫자가 변하면 serverIndex 값도 변한다.
 	- 만약 서버 하나가 장애가 나서 내려간다면 serverIndex 값도 갑작스럽게 변할 것이다.
 - 만약 이 해시 함수로 캐시 서버를 선택한다면, 특정 서버가 죽었을 경우 대부분의 캐시 클라이언트가 데이터가 없는 잘못된 서버에 접속하게 될 것이다.
 	- 물론 결과는 대규모 캐시 미스로 이어진다.
 
+![[System Design Interview - 표 5-2.png|300]]
+![[System Design Interview - 그림 5-2.png|300]]
+
+# 안정 해시
+
+> [!note] 안정 해시란
+> 해시 테이블 크기가 조정될 때 평균적으로 오직 k/n 개의 키만 재배치하는 해시 기술
+> - k 는 key 의 개수
+> - n 은 slot 의 개수
+
+- 안정 해시와 달리 대부분의 전통적 해시 테이블은 슬롯의 수가 바뀌면 거의 대부분의 키를 재배치한다.
 
 
 
