update: 05장. 안정 해시 설계 - 해시 공간과 해시 링

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -9,7 +9,7 @@ tags:
 > [!note] 안정 해시란
 > 수평적 규모 확장성 달성을 위해 요청 또는 데이터를 서버에 균등하게 나눌 때 사용하는 기술
 
-# 안정 해시가 해결하려는 문제
+# 선형 해시(Linear Hashing)의 문제점
 
 > [!summary] 요약
 > 서버의 추가/삭제 시 serverIndex 가 변하면서 서버에 부하가 균등하게 나누어지지 않는다.
@@ -29,14 +29,26 @@ tags:
 ![[System Design Interview - 표 5-2.png|300]]
 ![[System Design Interview - 그림 5-2.png|300]]
 
-# 안정 해시
+# 안정 해시 (Consistent Hashing)
 
 > [!note] 안정 해시란
-> 해시 테이블 크기가 조정될 때 평균적으로 오직 k/n 개의 키만 재배치하는 해시 기술
+> 해시 테이블 크기가 조정될 때 평균적으로 오직 k/n 개의 키만 재배치하는 해시 기술[^1]
 > - k 는 key 의 개수
-> - n 은 slot 의 개수
+> - n 은 slot(서버)의 개수
 
-- 안정 해시와 달리 대부분의 전통적 해시 테이블은 슬롯의 수가 바뀌면 거의 대부분의 키를 재배치한다.
+- 안정 해시와 달리 대부분의 선형 해싱(전통적 해싱)은 슬롯의 수가 바뀌면 거의 대부분의 키를 재배치한다[^1].
+	- 선형 해싱은 순차적인 서버 추가/삭제에 어울리는 방식 [^1]
+	- 안정 해싱은 비순차적인 서버 추가/삭제에 어울리는 방식[^1]
+
+## 해시 공간과 해시 링
+
+### 해시 링 만드는 방법
+
+1. 해시 함수를 하나 고른다. (ex: SHA-1)
+2. 해시 공간 범위의 첫번째와 마지막을 이어 링 형태로 만든다.
+
+![[System Design Interview - 그림 5-3.png]]
+![[System Design Interview - 그림 5-4.png|300]]
 
 
 
@@ -45,13 +57,17 @@ tags:
 
 
 
-1. Consistent hashing : https://en.wikipedia.org/wiki/Consistent_hashing
-2. Consistent Hashing : https://tom-e-white.com/2007/11/consistent-hashing.html
-3. Dynamo: Amazon's Highly Available Key-value Store : https://dl.acm.org/doi/10.1145/1294261.1294281
-4. Cassandra - A Decentralized Structured Storage System : https://www.cs.cornell.edu/Projects/ladis2009/papers/lakshman-ladis2009.pdf
-5. How Discord Scaled Elixir to 5,000,000 Concurrent Users : https://discord.com/blog/how-discord-scaled-elixir-to-5-000-000-concurrent-users
-6. CS168: The Modern Algorithmic Toolbox Lecture #1 : Introduction and Consistent Hashing : http://theory.stanford.edu/~tim/s16/l/l1.pdf
-7. Maglev: A Fast and Reliable Software Network Load Balancer : https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44824.pdf
+
+
+
+
+[^1]: Consistent hashing : https://en.wikipedia.org/wiki/Consistent_hashing
+[^2]: Consistent Hashing : https://tom-e-white.com/2007/11/consistent-hashing.html
+[^3]: Dynamo: Amazon's Highly Available Key-value Store : https://dl.acm.org/doi/10.1145/1294261.1294281
+[^4]: Cassandra - A Decentralized Structured Storage System : https://www.cs.cornell.edu/Projects/ladis2009/papers/lakshman-ladis2009.pdf
+[^5]: How Discord Scaled Elixir to 5,000,000 Concurrent Users : https://discord.com/blog/how-discord-scaled-elixir-to-5-000-000-concurrent-users
+[^6]: CS168: The Modern Algorithmic Toolbox Lecture #1 : Introduction and Consistent Hashing : http://theory.stanford.edu/~tim/s16/l/l1.pdf
+[^7]: Maglev: A Fast and Reliable Software Network Load Balancer : https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44824.pdf
 
 
 
