update: 05장. 안정 해시 설계 - 안정 해시 사용처

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -167,6 +167,10 @@ tags:
 - 같은 장애가 발생했을 때, 해시 코드를 가져와서 실제로 남아있어야 하는 서버 이외의 서버에서 delete 를 호출하면 된다.
 - 아니면 ExpireTime 을 짧게 가져가면 된다.
 
+## 대표적인 사용처
+
+Simple Spring Memcached (SSM) 에서 안정 해시가 사용된다.[^9]
+
 
 [^1]: Consistent hashing : https://en.wikipedia.org/wiki/Consistent_hashing
 [^2]: Consistent Hashing : https://tom-e-white.com/2007/11/consistent-hashing.html
@@ -176,5 +180,5 @@ tags:
 [^6]: CS168: The Modern Algorithmic Toolbox Lecture #1 : Introduction and Consistent Hashing : http://theory.stanford.edu/~tim/s16/l/l1.pdf
 [^7]: Maglev: A Fast and Reliable Software Network Load Balancer : https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44824.pdf
 [^8]: consistent hashing 의 주의점 : https://charsyam.wordpress.com/2011/11/25/memcached-에서의-consistent-hashing/
-
+[^9]: Simple Spring Memcached (SSM) : https://github.com/jistol/docker-compose-memcached-multi-test-sample
 
