add: 08장. TCP 프로그래밍

--- a/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
+++ b/01. Development/01. Book/가상 면접 사례로 배우는 대규모 시스템 설계 기초/05장. 안정 해시 설계.md
@@ -172,6 +172,27 @@ tags:
 Simple Spring Memcached (SSM) 에서 안정 해시가 사용된다.[^9]
 
 
+
+https://deview.kr/data/deview/session/attach/6_네이버는%20대규모%20메모리%20클러스터를%20어떻게%20효율적으로%20관리하나.pdf
+
+안정해시 사용하는건?
+
+NoSQL
+
+예측하기가 힘들다? 안정해시를 NoSQL 안쓰게 된 이유가 이것?
+예측가능하다가 중요하다.
+
+카산드라에서는 Replication Factor 를 중요시 여긴다.
+
+샤딩 vs 파티셔닝
+
+
+
+
+
+
+
+
 [^1]: Consistent hashing : https://en.wikipedia.org/wiki/Consistent_hashing
 [^2]: Consistent Hashing : https://tom-e-white.com/2007/11/consistent-hashing.html
 [^3]: Dynamo: Amazon's Highly Available Key-value Store : https://dl.acm.org/doi/10.1145/1294261.1294281
