update: 08장. TCP 프로그래밍 - 02. 간단한 에코 클라이언트/서버 프로그래밍

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -25,12 +25,190 @@ tags:
 - `java.net.Socket`
 	- 서버와 클라이언트가 통신하기 위해서 필요한 클래스
 
-![[System Design Interview - 그림 8-3.png]]
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-3.png]]
 
 - TCP 방법을 이용해서 클라이언트와 서버가 통신하려면 양쪽에 Socket 객체가 있어야 한다.
 - 이때 소켓을 생성하는 방법은 클라이언트 쪽과 서버 쪽이 다르다.
 
 - 서버와 클라이언트의 가장 큰 차이점은, 서버는 클라이언트가 접속하기를 기다리고 있어야 한다는 것이고, 클라이언트는 기다리고 있는 서버에게 접속을 시도한다는 점이다.
+
+## 1. 클라이언트의 접속 대기
+
+- 서버 쪽에서는 클라이언트의 접속을 기다리기 위해서 ServerSocket 객체를 생성한 후 ServerSocket 에 있는 `accept()` 메소드를 실행해서 대기하게 된다.
+
+- 이렇게 무엇인가 대기하기 위해서 멈춰 있는 메소드를 <u>블로킹 메소드</u>라 한다.
+
+```java
+ServerSocket server = new ServerSocket(10001);  
+System.out.println("접속을 기다립니다.");  
+Socket socket = server.accept();
+```
+
+## 2. 클라이언트 접속
+
+- 서버에서 위처럼 대기하고 있으면, 클라이언트는 서버로 접속할 수 있다.
+- 클라이언트에서 Socket 만 생성하면 내부적으로 알아서 접속이 일어나게 된다.
+
+- 클라이언트에서 Socket 객체가 성공적으로 생성되었다면, 서버의 `accept()` 메소드는 클라이언트에 대한 Socket 객체를 반환하게 된다.
+
+```java
+Socket socket = new Socket("127.0.0.1", 10001);
+```
+
+- 클라이언트에서 위 문장이 실행되면 `accept()` 메소드는 대기하고 있다가 접속한 클라이언트의 Socket 객체를 반환한다.
+
+```java
+Socket socket = server.accept();
+```
+
+## 3. Socket 으로부터 InputStream 과 OutputStream 구하기
+
+- 클라이언트에서 Socket 을 성공적으로 생성했다면(클라이언트에서 서버로 접속에 성공했다면), 
+  서버와 클라이언트는 각각 Socket 객체를 가지게 된다.
+	- 클라이언트에 있는 소켓은 서버로부터 읽어 들이고 서버에 쓰기 위한 객체
+	- 서버에 있는 소켓은 클라이언트로부터 읽어 들이고 클라이언트에 쓰기 위한 객체
+
+- 소켓이 있다는 것은 소켓이 연결되어 있는 곳에 
+  읽고 쓸 수 있는 InputStream 과 OuputStream 을 구할 수 있다는 것이다.
+
+```java
+OutputStream out = socket.getOutputStream();
+InpustStream in = socket.getInputStream();
+```
+
+- OutputStream 을 통해서 상대방에게 스트림을 전송할 수 있고, inputStream 을 통해 상대방이 전송한 스트림을 읽어 들일 수 있다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-4.png]]
+
+- 아래와 같이 쓸 수 도 있다.
+```java
+PrintWriter pw = new PrintWriter(new OutputStreamWriter(out));
+BufferedReader br = new BufferedReader(new InputStreamReader(in));
+```
+
+## 4. 접속 끊기
+
+- 읽고 쓰는 것은 양쪽의 소켓 중에서 어느 한쪽의 소켓이 끊어질 때까지 가능하다.
+- 소켓은 아래 방법으로 끊는다.
+
+```java
+socket.close();
+```
+
+# 02. 간단한 에코 클라이언트/서버 프로그래밍
+
+## 1. 에코 서버 프로그래밍
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.InetAddress;  
+import java.net.ServerSocket;  
+import java.net.Socket;  
+  
+public class EchoServer {  
+    public static void main(String[] args) {  
+        try {  
+            ServerSocket server = new ServerSocket(10001); // 서버소켓 생성
+            System.out.println("접속을 기다립니다.");  
+            Socket sock = server.accept(); 
+            // accpet 메소드를 실행하면 클라이언트가 접속할 때까지 블로킹 상태가 된다.
+            // 클라이언트가 접속하면 클라이언트와 통신할 수 있게 도와주는 Socket 객체를 반환한다.
+  
+            InetAddress inetAddress = sock.getInetAddress(); // 상대 IP 주소를 구한다.
+            System.out.println(inetAddress.getHostAddress() + " 로부터 접속했습니다.");  
+  
+            BufferedReader br = new BufferedReader(new InputStreamReader(sock.getInputStream())); // 쓰기 편하도록 InputStream 을 다른 객체로 바꿈
+            PrintWriter pw = new PrintWriter(new OutputStreamWriter(sock.getOutputStream())); // 읽기 쉽도록 OutputStream 을 다른 객체로 바꿈
+  
+            String line;  
+            while ((line = br.readLine()) != null) {  
+                System.out.println("클라이언트로 부터 전송받은 문자열 : " + line);  
+                pw.println(line);  
+                pw.flush();  
+            }  
+  
+            br.close();  
+            pw.close();  
+            sock.close();  
+  
+        } catch (Exception e) {  
+            System.out.println("연결종료");  
+        }  
+    }  
+}
+```
+
+> [!important] 한 줄을 읽어 들이는 메서드를 사용할 때의 주의점
+> - BufferedReader 의 `readLine()` 메소드는 읽어 들일 때 개행문자를 삭제한다.
+> - 따라서 다시 클라이언트 쪽으로 문자열을 전송할 때에는 문자열 뒤에 개행문자를 추가해서 전송해야 한다.
+> - 그래서 PrintWriter 의 `println()` 메소드를 사용한 것이다.
+
+> [!important] 출력할 때 `flush()` 메소드 호출을 잊지 말자
+> - 네트워크 프로그래밍의 경우, 출력한 후에는 반드시 `flush()` 메소드를 호출해줘야 한다.
+> - `flush()` 메소드를 호출하지 않을 경우에는 실제로 전송이 안되는 경우가 발생할 수 있다.
+
+## 2. 에코 클라이언트 프로그래밍
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.Socket;  
+  
+public class EchoClient {  
+    public static void main(String[] args) {  
+        try {  
+            Socket sock = new Socket("127.0.0.1", 10001);  
+            BufferedReader keyboard = new BufferedReader(new InputStreamReader(System.in));  
+  
+            BufferedReader br = new BufferedReader(new InputStreamReader(sock.getInputStream()));  
+            PrintWriter pw = new PrintWriter(new OutputStreamWriter(sock.getOutputStream()));  
+  
+            String line;  
+            while ((line = keyboard.readLine()) != null) {  
+                if (line.equals("quit")) {  
+                    break;  
+                }  
+                pw.println(line);  
+                pw.flush();  
+  
+                String echo = br.readLine();  
+                System.out.println("서버로부터 전달받은 문자열 : " + echo);  
+            }  
+  
+            pw.close();  
+            br.close();  
+            sock.close();  
+  
+        } catch (Exception e) {  
+            System.out.println("연결종료");  
+        }  
+    }  
+}
+```
+
+- 키보드로부터 "quit" 문자열을 입력 받으면, 앞서 설명한 while 문으로 빠져나온다.
+- 더 이상 서버와 통신하지 않을 것이기 때문에 IO 객체와 소켓에 있는 `close()` 메소드를 호출하게 된다.
+- 이때 서버쪽에서는 BufferedReader 의 `readLine()` 메소드가 null 값을 반환하게 된다.
+
+## 3. 에코 서버와 에코 클라이언트 실행
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-5.png|700]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-6.png|700]]
+
+## 4. 에코 클라이언트와 에코 서버의 문제점
+
+- 서버가 단 하나의 클라이언트 접속만 처리할 수 있다는 것이 문제다.
+- `accept()` 로 대기하고 있다가 클라이언트의 접속 요청이 오면 클라이언트와 통신할 수 있는 소켓을 반환한 후, 다시 `accept()`  하지 않기 때문이다.
+
+
+
+
 
 
 
