update: 08장. TCP 프로그래밍 - 03. 멀티스레드를 이용한 에코 서버

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -197,16 +197,102 @@ public class EchoClient {
 
 ## 3. 에코 서버와 에코 클라이언트 실행
 
-![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-5.png|700]]
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-5.png|650]]
 
-![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-6.png|700]]
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-6.png|650]]
 
 ## 4. 에코 클라이언트와 에코 서버의 문제점
 
 - 서버가 단 하나의 클라이언트 접속만 처리할 수 있다는 것이 문제다.
 - `accept()` 로 대기하고 있다가 클라이언트의 접속 요청이 오면 클라이언트와 통신할 수 있는 소켓을 반환한 후, 다시 `accept()`  하지 않기 때문이다.
 
+# 03. 멀티스레드를 이용한 에코 서버
 
+- 서버가 클라이언트 여러 개를 동시에 처리하지 못하는 문제를 해결하는 방법에는 여러가지 방법이 있다.
+- 여기서는 그 중 한 가지 방법인 스레드를 이용한 방법을 소개할 것이다.
+
+> [!tip] 클라이언트를 사용하기 위해서는 왜 스레드를 사용해야 할까?
+> 서버 입장에서, 서버는 연결된 클라이언트의 수만큼 소켓을 가지게 되는데, 각각의 소켓은 별개로 동작하기 때문이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-7.png]]
+
+## 1. 멀티스레드 에코 서버 프로그래밍
+
+```java
+import java.net.ServerSocket;  
+import java.net.Socket;  
+  
+public class EchoThreadServer {  
+    public static void main(String[] args) {  
+        try (ServerSocket server = new ServerSocket(10001)) {  
+            System.out.println("접속을 기다립니다.");  
+  
+            while (true) {  
+                Socket sock = server.accept();
+                EchoThread echoThread = new EchoThread(sock);
+                echoThread.start();
+            }  
+  
+        } catch (Exception e) {}  
+    }  
+}
+```
+
+- 무한히 반복되는 while 문 안에서 `accept()` 메소드를 실행해서 서버를 대기시킨다.
+- 클라이언트가 접속하게 되면 `accept()` 메소드는 접속한 클라이언트의 소켓 객체를 반환하게 된다.
+- 반환받은 소켓 객체는 스레드 객체인 EchoThread 의 생성자에 인자로 지정한다.
+
+- EchoThread 객체가 생성되면 `start()` 메소드를 실행해서 새로운 스레드가 실행되게 한다.
+- 이때 EchoThread 의 `run()` 메소드는 자동으로 실행되며, 메인 스레드는 동시에 while문 위쪽으로 올라가서 다시 `accept()` 메소드로 다른 클라이언트의 접속에 대기하게 된다.
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.InetAddress;  
+import java.net.Socket;  
+  
+public class EchoThread extends Thread {  
+    private Socket sock;  
+  
+    public EchoThread(Socket sock) {  
+        this.sock = sock;  
+    }  
+  
+    @Override  
+    public void run() {  
+        try {  
+            InetAddress inetAddr = sock.getInetAddress();  
+            System.out.println(inetAddr.getHostAddress() + " 로 부터 접속했습니다.");  
+  
+            BufferedReader br = new BufferedReader(new InputStreamReader(sock.getInputStream()));  
+            PrintWriter pw = new PrintWriter(new OutputStreamWriter(sock.getOutputStream()));  
+  
+            String line;  
+            while ((line = br.readLine()) != null) {  
+                System.out.println("클라이언트로부터 전송받은 문자열 : " + line);  
+                pw.println(line);  
+                pw.flush();  
+            }  
+            pw.close();  
+            br.close();  
+            sock.close();  
+  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+## 2. 멀티스레드 에코 서버 실행
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-8.png|400]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-9.png|600]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-10.png|600]]
 
 
 
