update: 08장. TCP 프로그래밍 - 04. 간단한 웹 서버 프로그래밍

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -294,6 +294,133 @@ public class EchoThread extends Thread {
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-10.png|600]]
 
+# 04. 간단한 웹 서버 프로그래밍
+
+간단한 웹 서버를 소켓 프로그래밍을 이용해서 직접 구현해보자.
+
+## 1. 브라우저의 요청정보 출력
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.net.ServerSocket;  
+import java.net.Socket;  
+  
+public class SimpleWebServerBasic {  
+    public static void main(String[] args) {  
+        try (ServerSocket serverSocket = new ServerSocket(80);  
+             Socket sock = serverSocket.accept();  
+             BufferedReader br = new BufferedReader(new InputStreamReader(sock.getInputStream()))) {  
+  
+            String line;  
+            while ((line = br.readLine()) != null) {  
+                System.out.println(line);  
+            }  
+  
+        } catch (Exception e) {  
+            System.out.println();  
+        }  
+    }  
+}
+```
+
+## 2. SimpleWebServerBasic 실행
+
+- `http://localhost/hello/hello.html` 를 브라우저에서 실행하면 서버에서 아래와 같이 정보가 뜬다.
+- 아래에서 가장 중요한 정보는 첫째 줄로, 브라우저가 GET 방식으로 '/' 페이지를 HTTP 1.1 프로토콜 방식으로 요청했다는 것을 의미한다.
+- 웹 서버는 첫째 줄을 분석하여 브라우저가 요청한 파일을 읽어 들여 브라우저 쪽으로 출력한다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-13.png|800]]
+
+## 3. 간단한 웹 서버 프로그래밍: SimpleWebServer
+
+- SimpleWebServer 는 브라우저 여러 개가 동시에 요청을 해도 문제가 없도록 작성할 것이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-15.png]]
+
+```java
+import java.net.ServerSocket;  
+import java.net.Socket;  
+  
+public class SimpleWebServer {  
+    public static void main(String[] args) {  
+        try (ServerSocket ss = new ServerSocket(80)) {  
+            while (true) {  
+                System.out.println("접속을 대기합니다.");  
+                Socket sock = ss.accept();  
+                System.out.println("새로운 스레드를 시작합니다.");  
+                HttpThread ht = new HttpThread(sock);  
+                ht.start();  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+- 브라우저의 요청정보를 읽어 들이고 응답을 보내는 것이 단 한번씩만 이루어진다.
+
+```java
+import java.io.BufferedReader;  
+import java.io.FileReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.Socket;  
+  
+public class HttpThread extends Thread {  
+    private Socket sock;  
+  
+    public HttpThread(Socket sock) {  
+        this.sock = sock;  
+    }  
+  
+    @Override  
+    public void run() {  
+        String filename = "";  
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(sock.getInputStream()))) {  
+  
+            String line = br.readLine();  
+            int start = line.indexOf(" ") + 2;  
+            int end = line.lastIndexOf("HTTP") - 1;  
+  
+            filename = line.substring(start, end);  
+            if (filename.equals("")) {  
+                filename = "index.html";  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+  
+        try (BufferedReader fbr = new BufferedReader(new FileReader(filename));  
+             PrintWriter pw = new PrintWriter(new OutputStreamWriter(sock.getOutputStream()))) {  
+  
+            System.out.println("사용자가 " + filename + "을 요청했습니다.");  
+            String fline;  
+            while ((fline = fbr.readLine()) != null) {  
+                pw.println(fline);  
+                pw.flush();  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+## 4. index.html 파일 작성
+
+- 생략
+
+## 5. 브라우저를 이용해서 요청정보를 보내고 응답 받기
+
+- 생략
+
+## 6. SimpleWebServer 의 문제점
+
+- 생략
+
 
 
 
