--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -421,6 +421,271 @@ public class HttpThread extends Thread {
 
 - 생략
 
+# 05. 간단한 채팅 클라이언트/서버 프로그래밍
+
+## 0. Intro
+
+### 채팅 클라이언트의 동작 방법 정의
+
+1. 채팅 클라이언트를 실행할 때 사용자의 아이디와 접속할 서버의 IP 주소를 전달한다.
+2. 다른 클라이언트가 접속하면, "XXX님이 접속했습니다." 란 메시지를 출력한다.
+3. 다른 사람의 대화 내용이 클라이언트에서 키보드로 입력하는 중에도 전달되어 화면에출력된다.
+4. 클라이언트에서 키보드로 문장을 입력한 후 엔터 키를 입력하면, 접속된 모든 클라이언트에 입력된 문자열이 전송된다.
+5. 클라이언트를 종료하면, "XXX님이 접속 종료했습니다." 란 메시지를 출력한다.
+
+#### 클라이언트 -> 서버
+
+- 클라이언트의 ID 정보를 서버에 전송한다.
+- 클라이언트에서 키보드로 입력된 문자열을 서버에 전송한다.
+- 클라이언트의 접속이 종료될 경우, 접속이 종료되었음을 서버에 알린다.
+
+### 채팅 서버의 동작 방법 정의
+
+1. 클라이언트 여러 개가 서버에 접속할 수 있어야 한다.
+2. 클라이언트가 접속할 경우, 서버는 이미 접속되어 있는 클라이언트에게 "XXX님이 접속했습니다" 라는 문자열을 전송해야 한다.
+3. 클라이언트가 문자열을 전송할 경우, 서버는 접속되어 있는 모든 클라이언트에게 전달받은 문자열을 전송해야 한다.
+4. 클라이언트가 접속을 종료했을 경우, 서버는 접속되어 있는 클라이언트에게 "XXX님이 접속 종료했습니다" 라는 문자열을 전송해야 한다.
+
+### 동시에 수행해야 하는 일들
+
+클라이언트, 서버 모두 <u>동시에</u> 처리해야 하는 일이 있다.
+
+- 클라이언트는 입력과 출력을 동시에 할 수 있어야 한다.
+- 서버는 클라이언트 여러 개로부터 입출력을 동시에 해야 한다.
+
+자바에서 "동시에" 라는 말이 나오면 "스레드" 가 필요하다는 뜻이다.
+
+- 클라이언트는 입출력을 동시에 하기 위해 스레드를 사용할 것이다.
+- 서버는 클라이언트 여러 개로부터 입출력을 하기 위해서 스레드를 사용할 것이다.
+
+## 1. 채팅 서버 프로그래밍: ChatServer
+
+- 채팅 서버는 스레드 간에 연관을 맺고 있다.
+- 하나의 스레드가 클라이언트로부터 문자열을 전송 받으면, 다른 스레드에 있는 OutputStream 을 통해서 전송 받은 문자열을 재전송할 수 있기 때문이다.
+
+- 즉, 클라이언트가 보낸 문자열을 접속한 모든 클라이언트에게 전송하기 위해서는 스레드 간에 접속한 클라이언트의 OutputStream 을 공유하는 방법이 필요하다는 것이다.
+
+```java
+import java.io.PrintWriter;  
+import java.net.ServerSocket;  
+import java.net.Socket;  
+import java.util.Map;  
+import java.util.concurrent.ConcurrentHashMap;  
+  
+public class ChatServer {  
+    public static void main(String[] args) {  
+        try (ServerSocket server = new ServerSocket(10001)) {  
+            System.out.println("접속을 기다립니다.");  
+            Map<String, PrintWriter> clientWriters = new ConcurrentHashMap<>();  
+            while (true) {  
+                Socket sock = server.accept();  
+                ChatThread chatThread = new ChatThread(sock, clientWriters);  
+                chatThread.start();  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+}
+```
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.Socket;  
+import java.util.Arrays;  
+import java.util.List;  
+import java.util.Map;  
+  
+public class ChatThread extends Thread {  
+    private final Socket clientSocket;  
+    private String id;  
+    private BufferedReader clientBufferedReader;  
+    private final Map<String, PrintWriter> clientPrintWriters;  
+    private boolean initFlag = false;  
+  
+    public ChatThread(Socket clientSocket, Map<String, PrintWriter> clientPrintWriters) {  
+        this.clientSocket = clientSocket;  
+        this.clientPrintWriters = clientPrintWriters;  
+        try {  
+            clientBufferedReader = new BufferedReader(new InputStreamReader(clientSocket.getInputStream()));  
+            this.id = clientBufferedReader.readLine();  
+  
+            broadcast(id + "님이 접속했습니다.");  
+            System.out.println("접속한 사용자의 아이디는 " + id + "입니다.");  
+  
+            PrintWriter clientPrintWriter = new PrintWriter(new OutputStreamWriter(clientSocket.getOutputStream()));  
+            clientPrintWriters.put(this.id, clientPrintWriter);  
+            initFlag = true;  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        }  
+    }  
+  
+    @Override  
+    public void run() {  
+        try {  
+            String line;  
+            while ((line = clientBufferedReader.readLine()) != null) {  
+                if (line.startsWith("/quit")) { // /quit 으로 시작하면 종료한다.  
+                    break;  
+                }  
+                if (line.startsWith("/to ")) { // /to 로 시작하면 특정 클라이언트에게 메시지를 보낸다.  
+                    sendMsg(line);  
+                } else { // 전체 클라이언트에게 메시지를 보낸다.  
+                    broadcast(id + " : " + line);  
+                }  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        } finally {  
+            clientPrintWriters.remove(id); // Client 목록에서 제거한다.  
+            broadcast(id + " 님이 접속 종료했습니다.");  
+            try {  
+                if (clientSocket != null) {  
+                    clientSocket.close();  
+                }  
+            } catch (Exception e) {  
+                System.out.println(e);  
+            }  
+        }  
+    }  
+  
+    private void broadcast(String msg) {  
+        for (PrintWriter pw : clientPrintWriters.values()) {  
+            pw.println(msg);  
+            pw.flush();  
+        }  
+    }  
+  
+    private void sendMsg(String msg) {  
+        List<String> splits = Arrays.asList(msg.split(" ", 3)); // format : /to 전송할_클라이언트_ID message  
+        if (splits.size() == 3) {  
+            String to = splits.get(1);  
+            String realMsg = splits.get(2);  
+  
+            PrintWriter pw = clientPrintWriters.get(to);  
+            if (pw != null) {  
+                pw.println(id + " 님이 다음의 귓속말을 보내셨습니다. : " + realMsg);  
+                pw.flush();  
+            }  
+        }  
+    }  
+}
+```
+
+## 2. 채팅 클라이언트 프로그래밍: ChatClient
+
+- 채팅 클라이언트는 명령 창에서 동작하는 프로그램이다.
+- 키보드로부터 입력 받은 문자열을, 소켓을 통해서 구한 PrintWriter 를 이용해서 출력한다.
+- 그 결과 서버에 문자열이 전송된다.
+
+- 그런데 문제는 키보드로 사용자가 글을 입력하고 있는 중간에도 서버에서 다른 클라이언트에서 전송한 문자열을 소켓을 통해서 전달 받을 수 있다는 것이다.
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-19.png|700]]
+
+- 결국, 메인 스레드가 키보드로부터 입력을 받을 때에는 다른 일을 할 수 없기 때문에 서버로부터 전달받은 문자열을 화면에 출력할 수 없다는 문제가 생긴다.
+- 이러한 문제를 해결하려면 입력 따로, 출력 따로 동작하도록 채팅 클라이언트를 작성해야 한다.
+	- 키보드로부터 문자열을 입력 받아 서버로 전달하는 것은 메인 스레드로 처리
+	- 서버로부터 전송 받은 문자열은 스레드를 따로 작동시켜서 처리
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-20.png|700]]
+
+
+
+```java
+import java.io.BufferedReader;  
+import java.io.InputStreamReader;  
+import java.io.OutputStreamWriter;  
+import java.io.PrintWriter;  
+import java.net.Socket;  
+  
+public class ChatClient {  
+    public static void main(String[] args) {  
+        String clientId = args[0];  
+        String serverIp = "127.0.0.1";  
+  
+        boolean endflag = false;  
+  
+        try (Socket sock = new Socket(serverIp, 10001);  
+             PrintWriter clientOutputStream = new PrintWriter(new OutputStreamWriter(sock.getOutputStream()));  
+             BufferedReader clientInputStream = new BufferedReader(new InputStreamReader(sock.getInputStream()));  
+             BufferedReader keyboard = new BufferedReader(new InputStreamReader(System.in))) {  
+  
+            clientOutputStream.println(clientId);  
+            clientOutputStream.flush();  
+  
+            InputThread it = new InputThread(sock, clientInputStream);  
+            it.start();  
+  
+            String line;  
+            while ((line = keyboard.readLine()) != null) {  
+                clientOutputStream.println(line);  
+                clientOutputStream.flush();  
+                if (line.equals("/quit")) {  
+                    endflag = true;  
+                    break;  
+                }  
+            }  
+            System.out.println("클라이언트의 접속을 종료합니다.");  
+  
+        } catch (Exception e) {  
+            if (!endflag) {  
+                System.out.println(e);  
+            }  
+        }  
+    }  
+}
+```
+
+```java
+import java.io.BufferedReader;  
+import java.net.Socket;  
+  
+public class InputThread extends Thread {  
+    private Socket sock;  
+    private BufferedReader clientInputStream;  
+  
+    public InputThread(Socket sock, BufferedReader clientInputStream) {  
+        this.sock = sock;  
+        this.clientInputStream = clientInputStream;  
+    }  
+  
+    @Override  
+    public void run() {  
+        try {  
+            String line;  
+            while ((line = clientInputStream.readLine()) != null) {  
+                System.out.println(line);  
+            }  
+        } catch (Exception e) {  
+            System.out.println(e);  
+        } finally {  
+            try {  
+                if (clientInputStream != null) {  
+                    clientInputStream.close();  
+                }  
+            } catch (Exception e) {}  
+            try {  
+                if (sock != null) {  
+                    sock.close();  
+                }  
+            } catch (Exception e) {}  
+        }  
+    }  
+}
+```
+
+## 3. 채팅 클라이언트와 서버의 실행
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-21.png|500]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-22.png|500]]
+
+![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-23.png|400]]
+
 
 
 
