update: 08장. TCP 프로그래밍

--- a/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
+++ b/01. Development/01. Book/자바 IO & NIO 네트워크 프로그래밍/08장. TCP 프로그래밍.md
@@ -686,9 +686,15 @@ public class InputThread extends Thread {
 
 ![[자바 IO & NIO 네트워크 프로그래밍 - 그림 8-23.png|400]]
 
+## 4. 채팅 클라이언트/서버에서 아쉬운 부분
 
+- 이 채팅 클라이언트와 서버는 방(room)이 하나만 있다.
+- 이러한 점을 해결하려면 방 여러 개를 운영해야 한다.
 
+# 06. 윈도우용 채팅 클라이언트 작성
 
+생략
 
+# 07. 객체 직렬화를 이용한 네트워크 프로그래밍
 
-
+생략
