--- a/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
+++ b/01. Development/02. Lecture/코딩으로 학습하는 GoF의 디자인 패턴/빌더 패턴.md
@@ -6,7 +6,7 @@ tags:
   - 디자인_패턴
   - 온라인_강의
   - 인프런
-  - 백기선
+  - 강사_백기선
   - 코딩으로_학습하는_GoF의_디자인_패턴
   - 객체_생성_관련_디자인_패턴
 notion link: https://kangbada0728.notion.site/459082c523d846e79b1156501b401517?pvs=4
