update: 섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법 - 1강. 코틀린에서 변수를 다루는 방법

--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
@@ -7,6 +7,161 @@ tags:
   - 자바_개발자를_위한_코틀린_입문
   - Kotlin
 ---
+# 1강. 코틀린에서 변수를 다루는 방법
+
+## 1. 변수 선언 키워드 - var 과 val 의 차이점
+
+### Java 코드
+
+```java
+long number1 = 10L; // (1)  
+final long number2 = 10L; // (2)  
+  
+Long number3 = 1_000L; // (3)  
+Person person = new Person("최태현"); // (4)
+```
+
+- java 에서 long 과 final long 의 차이
+	- 이 변수는 가변인가 불변인가
+
+### Kotlin 코드
+
+```kotlin
+var number1 = 10L // 가변변수
+val number2 = 10L // 불변변수
+
+var number3: Long = 10L // 타입작성 안해도 된다. 하고 싶다면 콜론 띄고 타입을 쓰면 된다.
+val number4: Long = 10L // 타입작성 안해도 된다. 하고 싶다면 콜론 띄고 타입을 쓰면 된다.
+
+var number5 // 에러. 초기값을 넣지 않으면 값을 추론할 수 없기 때문에 에러가 난다.
+var number6: Long // 타입을 넣어주면 에러가 나지 않는다.
+println(number6) // 에러. 초기값을 넣지 않았기 때문에 에러가 난다.
+
+val number7 // 에러. 초기값을 넣지 않으면 값을 추론할 수 없기 때문에 에러가 난다.
+val number8: Long // 타입을 넣어주면 에러가 나지 않는다.
+println(number8) // 에러. 초기값을 넣지 않았기 때문에 에러가 난다.
+```
+
+- 모든 변수는 var 또는 val 을 붙여 주어야 한다.
+	- var : 변경 가능
+	- val : 변경 불가능
+
+- 코틀린에서는 타입을 컴파일러가 자동으로 추론해준다.
+- 초기값을 지정해주지 않는 경우엔 타입을 명시해줘야 한다.
+
+- val 컬렉션에 element 를 추가할 수 있다.
+- Java 에서는 `final List<Integer> list = new ArrrayList<>()` 일 경우 `final` 이 붙어도 list 안에 element 를 넣을 수 있는다.
+- kotlin 에서도 똑같이 val 컬렉션에 element 을 넣을 수 있다.
+
+> [!tip]
+> 모든 변수는 우선 val 로 만들고 꼭 필요한 경우 var 로 변경한다.
+
+## 2. Kotlin 에서의 Primitive Type
+
+### Java 코드
+
+```java
+long number1 = 10L; // (1)  
+Long number3 = 1_000L; // (3)  
+```
+
+- long 은 primitive type
+- Long 은 reference type
+- 보통 연산할 때 성능향상을 위해서 long 을 쓰라고 함
+
+### Kotlin 코드
+
+```kotlin
+var number1: Long = 10L
+var number3: Long = 1_000L
+```
+
+- Kotlin 에서는 모두 Long 이다.
+- 그럼 성능이 떨어지지 않을까?
+
+> [!quote]
+> 숫자, 문자, boolean 과 같은 몇몇 타입은 내부적으로 특별한 표현을 갖는다.
+> 이 타입들은 실행시에 Primitie Value 로 표현되지만, 코드에서는 평범한 클래스 처럼 보인다.
+
+- 즉, Long 타입 하나로 합쳐져 있지만, 만약 연산을 하게 될 경우 Kotlin 이 알아서 내부적으로 primitive type 으로 바꿔서 처리해준다.
+- 즉, 프로그래머가 boxing / unboxing 을 고려하지 않아도 되도록 알아서 처리해준다는 뜻이다.
+
+> [!tip]
+> IntelliJ 에서 Tools -> Kotlin -> Show Kotlin Bytecode -> Decompile 를 누르면 Kotlin 코드를 Java 코드로 바꿔서 볼 수 있다.
+
+## 3. Kotlin 에서의 nullable 변수
+
+### Java 코드
+
+```java
+Long number3 = null; // (3)  
+```
+
+- 위 코드에 null 이 들어갈 수도 있다.
+
+### Kotlin 코드
+
+```kotlin
+var number3 = null // 에러. 모든 변수에는 null 이 들어갈 수 없게 설계해놓았다.
+var number4: Long? = 1_000L 
+number4 = null // 오류가 나지 않는다.
+```
+
+- 기본적으로 Kotlin 에서 모든 변수는 null 이 들어갈 수 없다.
+- null 들어갈 수 있게 설정하고 싶다면 "타입?" 를 사용해야 한다.
+
+## 4. Kotlin 에서의 객체 인스턴스화
+
+### Java 코드
+
+```java
+Person person = new Person("최태현"); // (4)
+```
+
+```java
+public class Person {  
+  
+  private final String name;  
+  
+  public Person(String name) {  
+    this.name = name;  
+  }  
+  
+  public String getName() {  
+    return name;  
+  }  
+ 
+}
+```
+
+### Kotlin 코드
+
+```kotlin
+var person = Person("최태현")
+```
+
+- Kotlin 에서는 객체를 생성할 때 new 를 쓰지 않는다.
+
+# 2강. 코틀린에서 null 을 다루는 방법
+
+
+
+
+
+# 3강. 코틀린에서 Type 을 다루는 방법
+
+
+
+
+
+# 4강. 코틀린에서 연산자를 다루는 방법
+
+
+
+
+
+
+
 
 
 
