--- a/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
+++ b/01. Development/02. Lecture/자바 개발자를 위한 코틀린 입문/섹션 1. 코틀린에서 변수와 타입, 연산자를 다루는 방법.md
@@ -351,8 +351,240 @@ startsWithA(person.name) // @Nullable 이 있어서 오류가 난다. 만약 @N
 
 # 3강. 코틀린에서 Type 을 다루는 방법
 
+## 1. 기본 타입
+
+> [!note]
+> Byte, Short, Int, Long, Float, Double, 부호 없는 정수들
+
+- 코틀린에서는 선언된 기본값을 보고 타입을 추론한다.
+
+```kotlin
+val number1 = 3  // L이 안붙으면 Int
+val number2 = 3L // L이 붙으면 Long
+```
+
+```kotlin
+val number1 = 3.0f // f가 붙으면 Float
+val number2 = 3.0  // f가 안붙으면 Double
+```
+
+### Kotlin 에서의 기본 타입간 변환
+
+> [!important]
+> - Java 에서 기본 타입간의 변환은 <u>암시적으로</u> 이루어질 수 있다.
+> - Kotlin 에서 기본 타입간의 변환은 <u>명시적으로</u> 이루어져야 한다.
+
+```java
+int number1 = 4;
+long number2 = number1; // int 타입의 값이 long 타입으로 암시적 변경이 되었다.
+
+System.out.println(number1 + number2);
+```
+
+- 위처럼 Java 에서는 더 큰 타입으로는 암시적 변경이 가능하다.
+
+```kotlin
+val number1 = 4
+val number2: Long = number1 // 컴파일에러 : Type mismatch 오류
+
+println(number1 + number2)
+```
+
+- 위처럼 Kotlin 에서는 더 큰 타입으로라도 암시적 타입 변경이 불가능하다.
+- 따라서 아래처럼 `to변환타입()` 을 사용해야 한다.
+
+```kotlin
+val number1: Int = 4
+val number2: Long = number1.toLong() // 에러 안남
+
+println(number1 + number2)
+```
+
+#### 나눗셈에서 소수 구하기
+
+- Int 에서 Double 로 형변환 할 때 Java 는 `(Double) number2` 같은 식으로 쓰지만, Kotlin 에서는 `number2.toDouble()` 로 써야한다.
+
+```kotlin
+val number1 = 3
+val number2 = 5
+val result = number1 / number2.toDouble()
+
+println(result)
+```
+
+#### nullable 변수를 타입 변환하기
+
+- 아래와 같이 Safe Call 과 Elvis 연산자를 이용해서 null 에 대한 처리를 해줘야 한다.
+
+```kotlin
+val number1: Int? = 3  
+val number2: Long = number1?.toLong() ?: 0
+```
+
+## 2. 타입 캐스팅
+
+- 기본 타입이 아닌 일반 타입에 대한 캐스팅은 어떻게 할까
+
+```java
+public static void printAgeIfPerson(Object obj) {  
+    if (obj instanceof Person) { // instanceof : 변수가 주어진 타입인지 체크
+        Person person = (Person) obj;  
+        System.out.println(person.getAge());  
+    }  
+}
+```
+
+```kotlin
+fun printAgeIfPerson(obj: Any) {  
+    if (obj is Person) { // instanceof 대신 is 를 쓴다.
+        val person = obj as Person // (Person) 대신 as 를 쓴다.
+        println(person.age)  
+    }  
+}
+```
+
+- `obj as Person` 은 obj 를 Person 으로 간주하겠다는 뜻이다.
+
+### 스마트 캐스트
+
+- 사실 위에서 `as Person` 은 생략이 가능하다.
+- 그래서 아래와 같이 써도 무방하다.
+- 코틀린 컴파일러가 컨텍스트를 분석해서 If 안에 들어왔는데 If 에서 타입 체크를 해줬다는 것을 인식해준다.
+
+```kotlin
+fun printAgeIfPerson(obj: Any) {
+	if (obj is Person) {
+		println(obj.age)
+	}
+}
+```
+
+### instanceof 의 반대
+
+- Java 처럼 괄호로 싼다음 느낌표를 붙여줘도 되지만, 아래와 같이 is 앞에 느낌표를 붙여줘도 된다.
+
+```kotlin
+fun printAgeIfPerson(obj: Any) {
+	if (obj !is Person) {
+		println(obj.age)
+	}
+}
+```
+
+### 객체 타입캐스트 nullable 처리
+
+```kotlin
+fun printAgeIfPerson(obj: Any?) {  
+    val person = obj as? Person // 타입은 Person? 가 된다.
+    println(person?.age)
+}
+```
+
+- `obj as? Person`
+	- obj 가 null 이 아니라면 Person 타입으로 변환시키고, null 이면 전체가 null 이 된다.  
+
+### 정리
+
+![[자바 개발자를 위한 코틀린 입문 - 1-3-1.png]]
+
+![[자바 개발자를 위한 코틀린 입문 - 1-3-2.png]]
+
+![[자바 개발자를 위한 코틀린 입문 - 1-3-3.png]]
+
+## 3. Kotlin 의 3가지 특이한 타입
+
+### Any
+
+- Java 의 Object 역할 (모든 객체의 최상위 타입)
+- Java 와 달리, Primitive Type 의 최상위 타입도 Any 이다.
+- Any 자체로는 null 을 포함할 수 없어 null 을 포함하고 싶다면 Any? 로 표현한다.
+- Any 에 equals, hashCode, toString 이 존재한다.
+
+### Unit
+
+- Java 의 void 와 동일한 역할
+- void 와 다르게 Unit 은 그 자체로 타입 인자로 사용 가능하다.
+- 함수형 프로그래밍에서 Unit 은 단 하나의 인스턴스만 갖는 타입을 의미
+	- 즉, 코틀린의 Unit 은 실제 존재하는 타입이다.
+
+### Nothing
+
+- Nothing 은 함수가 정상적으로 끝나지 않았다는 사실을 표현하는 역할
+- 무조건 예외를 반환하는 함수, 무한 루프 함수 등
+
+```kotlin
+fun fail(message: String): Nothing {
+	throw IllegalArgumentException(message)
+}
+```
+
+## 4. String Interpolation, String indexing
+
+### Java 코드
+
+- Java 에서는 아래와 같은 방식들로 문자열을 가공한다.
+	- `String.format()`, `StringBuilder` 등
+
+```java
+Person person = new Person("최태현", 100);
+String log = String.format("사람의 이름은 %s이고 나이는 %s세 입니다.", person.getName(), person.geAge());
+```
+
+```java
+StringBuilder builder = new StringBuilder();
+builder.append("사람의 이름은");
+builder.append(person.getName());
+builder.append("이고 나이는");
+builder.append(person.getAge());
+builder.append("세 입니다.");
+```
+
+### Kotlin 코드
+
+- 코틀린에서는 Java 와 같은 방식을 사용하지 않는다.
+- `${변수}` 를 사용하면 값이 들어간다.
+
+```kotlin
+val person = Person("최태현", 100)
+val log = "사람의 이름은 ${person.name}이고 나이는 ${person.age}세 입니다"
+```
+
+- person.name 같은 객체 안의 변수가 아닌, 일반 변수를 쓴다면 아래처럼 중괄호를 생략할 수도 있다.
+
+```kotlin
+val ete = "sdf"  
+println("sdf $ete")
+```
 
 
+> [!tip]
+> 변수 이름만 사용하더라도 `${변수}` 를 사용하는 것이 가독성, 일괄 변환, 정규식 활용 측면에서 편하다.
+
+### 여러 줄에 걸친 문자열 쓰기
+
+- Kotlin 에서는 따옴표 세개를 써서 여러 줄에 걸친 문자열을 쓴다.
+
+```kotlin
+val withoutIndent =   
+    """  
+        ABC        
+        sdfsdf        
+        ${name}    
+    """.trimIndent()  
+println(withoutIndent)
+```
+
+### 특정 문자 가져오기
+
+```java
+String str = "ABCDE";
+char ch = str.charAt(1);
+```
+
+```kotlin
+val str = "ABCDE"
+val ch = str[1]
+```
 
 
 # 4강. 코틀린에서 연산자를 다루는 방법
